# image-eval

./: .gitignore  README.md  auto.py  hatch_build.py  initialize.py  main.py  new_plan.md  partial.py  pyproject.toml  template.json  template_schema.md
native/ROISelector/: Package.swift
native/ROISelector/Sources/ROISelectorApp/: AppDelegate.swift  ApplicationMain.swift  MainViewController.swift  MainWindowController.swift  (+2 more)
src/image_eval/: __init__.py  artifacts.py  cli.py  dqe_plot.py  dqe_results.py  evaluation.py  images.py  initialize.py  models.py  mtf_plot.py  mtf_profiles.py  mtf_results.py  nps_plot.py  nps_results.py  overlay.py  register_crop.py  registered_template.py  registration.py  registration_artifacts.py  registration_candidates.py  roi.py  roi_picker.py  sources.py  square_wave_fit.py  template_io.py  usaf_1951.py
src/mtf_calc/: __init__.py  _roi_tools.py  _viz_host.py  anchor.py  app.py  io.py  models.py  mtf.py  pages.py  pipeline.py  routes.py  select.py  usaf1951.py  viz.py  workflow_session.py  workspace.py
src/mtf_calc/ui/: app.js  render.js  roi.js  roi_picker.css  roi_picker.html  roi_picker.js  styles.css
src/mtf_calc/workflow/: find_anchors.py  stage6_fit.py  stage6_profiles.py
tests/: test_cli.py  test_dqe_plot.py  test_dqe_results.py  test_evaluation.py  test_initialize.py  test_mtf_plot.py  test_mtf_profiles.py  test_mtf_results.py  test_nps_plot.py  test_nps_results.py  test_registered_template.py  test_registration_candidates.py  test_sources.py  test_square_wave_fit.py  test_template_io.py  test_usaf_1951.py
(+8 files in other folders)
