[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "image-eval"
version = "0.1.0"
description = "MTF, NPS, and DQE calculations"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "numpy>=2.0",
    "opencv-python>=4.10",
]

[tool.hatch.build.targets.wheel]
packages = ["src/image_eval"]

[dependency-groups]
dev = [
    "ruff>=0.15.12",
    "ty>=0.0.33",
]

[tool.ruff]
line-length = 100
target-version = "py313"
